Refactor CLI and preprocessing scripts; update dependencies
- Added `click` dependency for improved CLI handling.
- Replaced `krill.cli.main` with `krill.cli` for script entry points.
- Removed old CLI implementation and replaced it with a new `krill.cli` module.
- Refactored preprocessing logic into `do_preprocess` function with a configuration file argument.
- Simplified training script to accept a configuration file and removed hardcoded parameters.
- Updated `pyproject.toml` and `uv.lock` to reflect new dependencies and versions.
- Deleted old `preprocess.py` and `train.py` files, preserving their functionality in new implementations.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "accelerate>=1.9.0",
+    "click>=8.2.1",
     "datasets>=4.0.0",
     "flash-attn>=2.8.2",
     "hf-transfer>=0.1.9",
@@ -22,8 +23,8 @@ dependencies = [
 ]
 
 [project.scripts]
-krill = "krill.cli.main:main"
-kr = "krill.cli.main:main"
+krill = "krill.cli:main"
+kr = "krill.cli:main"
 
 [tool.uv.sources]
 torch = [{ index = "pytorch-cu128" }]
