--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ dependencies = [
     "triton>=3.3.1",
     "trl>=0.20.0",
     "wandb>=0.21.0",
+    "PyYAML>=5.4.1",
+    "pydantic>=1.10.0",
 ]
 
 [project.scripts]
