--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,9 +36,14 @@ krill = "krill.cli:main"
 kr = "krill.cli:main"
 
 [tool.uv.sources]
-torch = [{ index = "pytorch-cu128" }]
+torch = [{ index = "pytorch-nightly" }]
 
 [[tool.uv.index]]
 name = "pytorch-cu128"
 url = "https://download.pytorch.org/whl/cu128"
+explicit = true
+
+[[tool.uv.index]]
+name = "pytorch-nightly"
+url = "https://download.pytorch.org/whl/nightly/cu129"
 explicit = true
