--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ krill = "krill.cli:main"
 kr = "krill.cli:main"
 
 [tool.uv.sources]
-torch = [{ index = "pytorch-nightly" }]
+torch = [{ index = "pytorch-cu128" }]
 
 [[tool.uv.index]]
 name = "pytorch-cu128"
