--- a/examples/ko-webtext-micro.yaml
+++ b/examples/ko-webtext-micro.yaml
@@ -6,14 +6,14 @@ dataset_prepared_min_length: 150
 
 datasets:
   - path: HAERAE-HUB/KOREAN-WEBTEXT
-    split: train[:10000]
+    split: train[:50_000]
     text_column: text
 
 hub_model_id: minpeter/webtext-8k-micro-250801
 output_dir: ./artifacts/models/webtext-8k-micro-250801
 
 num_epochs: 10
-learning_rate: 1e-3
+learning_rate: 1e-4
 weight_decay: 0.1
 optimizer: muon
 
