--- a/examples/ko-webtext-small.yaml
+++ b/examples/ko-webtext-small.yaml
@@ -17,4 +17,7 @@ learning_rate: 1e-3
 weight_decay: 0.1
 optimizer: muon
 
+micro_batch_size: 128
+gradient_accumulation_steps: 1
+
 model_config_name: small
