--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,8 +32,8 @@ dependencies = [
 ]
 
 [project.scripts]
-krill = "krill.cli:main"
-kr = "krill.cli:main"
+krill = "krill.main:main"
+kr = "krill.main:main"
 
 [tool.uv.sources]
 torch = [{ index = "pytorch-cu128" }]
