--- a/examples/tiny-ko-small-250802.yaml
+++ b/examples/tiny-ko-small-250802.yaml
@@ -29,7 +29,7 @@ num_epochs: 1
 learning_rate: 1e-3
 weight_decay: 0.01
 optimizer: muon
-muon_implementation: kellerjordan
+muon_implementation: moonlight
 
 micro_batch_size: 16
 gradient_accumulation_steps: 1
