--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,9 @@ dependencies = [
 krill = "krill.main:main"
 kr = "krill.main:main"
 
+[tool.uv]
+no-build-isolation-package = ['flash-attn', 'setuptools']
+
 [tool.uv.sources]
 torch = [{ index = "pytorch-cu128" }]
 muon-optimizer = { git = "https://github.com/KellerJordan/Muon" }
