--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,10 +40,15 @@ krill = "krill.main:main"
 kr = "krill.main:main"
 
 [tool.uv.sources]
-torch = [{ index = "pytorch-cu128" }]
+torch = [{ index = "pytorch-cu128" }, { index = "pytorch-cpu" }]
 muon-optimizer = { git = "https://github.com/KellerJordan/Muon" }
 
 [[tool.uv.index]]
 name = "pytorch-cu128"
 url = "https://download.pytorch.org/whl/cu128"
+explicit = true
+
+[[tool.uv.index]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
 explicit = true
