--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,8 +2,8 @@
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
-[tool.uv]
-no-build-isolation-package = ['flash-attn', 'setuptools']
+# [tool.uv]
+# no-build-isolation-package = ['flash-attn', 'setuptools']
 
 [tool.setuptools.packages.find]
 where = ["src"]
@@ -21,10 +21,7 @@ dependencies = [
     "accelerate>=1.9.0",
     "click>=8.2.1",
     "datasets>=4.0.0",
-    "flash-attn>=2.8.2",
     "hf-transfer>=0.1.9",
-    "liger-kernel>=0.6.1",
-    "pytorch-optimizer>=3.7.0",
     "torch>=2.7.1",
     "transformers>=4.54.1",
     "triton>=3.3.1",
@@ -32,18 +29,23 @@ dependencies = [
     "wandb>=0.21.0",
     "PyYAML>=5.4.1",
     "pydantic>=1.10.0",
-    "muon-optimizer",
 ]
+
+[project.optional-dependencies]
+train = [
+    "liger-kernel>=0.6.1",
+    "flash-attn>=2.8.2",
+    "muon-optimizer",
+    "pytorch-optimizer>=3.7.0",
+]
+
+[tool.uv]
+default-groups = "all"
+
 
 [project.scripts]
 krill = "krill.main:main"
 kr = "krill.main:main"
 
 [tool.uv.sources]
-torch = [{ index = "pytorch-cu128" }]
 muon-optimizer = { git = "https://github.com/KellerJordan/Muon" }
-
-[[tool.uv.index]]
-name = "pytorch-cu128"
-url = "https://download.pytorch.org/whl/cu128"
-explicit = true
