--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,26 +32,25 @@ dependencies = [
     "pytorch-optimizer>=3.7.0",
     "accelerate>=1.9.0",
     "triton>=3.3.1",
-    "liger-kernel>=0.6.1",
 ]
 
 [project.optional-dependencies]
-flash-attn = [
+cuda = [
     "flash-attn>=2.8.2",
+    "liger-kernel>=0.6.1",
     "torch>=2.7.1",
 ]
-
-[project.scripts]
-krill = "krill.main:main"
-kr = "krill.main:main"
 
 [tool.uv.sources]
 muon-optimizer = { git = "https://github.com/KellerJordan/Muon" }
 torch = [
   { index = "pytorch-cpu" },
-  { index = "pytorch-cu128", extra = "flash-attn" },
+  { index = "pytorch-cu128", extra = "cuda" },
 ]
 
+[project.scripts]
+krill = "krill.main:main"
+kr = "krill.main:main"
 
 [[tool.uv.index]]
 name = "pytorch-cpu"
