--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,5 +43,5 @@ cuda = [
 muon-optimizer = { git = "https://github.com/KellerJordan/Muon" }
 
 [project.scripts]
-krill = "krill.main:main"
-kr = "krill.main:main"
+krill = "krill.main:cli"
+kr = "krill.main:cli"
