Update tokenizer configuration and dataset split size for memory efficiency

--- a/examples/memory_efficient_example.yaml
+++ b/examples/memory_efficient_example.yaml
@@ -2,8 +2,8 @@
 # This demonstrates the new memory efficiency features
 
 # Tokenizer configuration
-vocab_size: 50257
-hub_tokenizer_id: gpt2
+vocab_size: 48000
+hub_tokenizer_id: pretraining/fw2-edu-kr-tokenizer-48k
 
 # Preprocessing configuration
 sequence_len: 2048
@@ -17,7 +17,7 @@ preprocess_chunk_size: 500 # Process only 500 samples in memory at a time
 # Dataset configuration
 datasets:
   - path: minpeter/fineweb-2-edu-korean
-    split: train[:10_000]
+    split: train[:50_000]
     text_column: text
 
 # Training configuration (not used during preprocessing)
