--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,12 +29,12 @@ dependencies = [
     "pydantic>=1.10.0",
     "muon-optimizer",
     "pytorch-optimizer>=3.7.0",
-    "accelerate>=1.9.0",
-    "triton>=3.3.1",
+    "accelerate>=1.9.0"
 ]
 
 [project.optional-dependencies]
 cuda = [
+    "triton>=3.3.1",
     "flash-attn>=2.8.2",
     "liger-kernel>=0.6.1",
 ]
