--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ dependencies = [
     "pydantic>=1.10.0",
     "muon-optimizer",
     "pytorch-optimizer>=3.7.0",
-    "accelerate>=1.9.0"
+    "accelerate>=1.9.0",
+    "kernels>=0.9.0",
 ]
 
 [project.optional-dependencies]
