--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
     "click>=8.2.1",
     "datasets>=4.0.0",
     "hf-transfer>=0.1.9",
-    "torch>=2.7.1",
+    "torch==2.7.1",
     "transformers>=4.54.1",
     "trl>=0.20.0",
     "wandb>=0.21.0",
@@ -30,7 +30,6 @@ dependencies = [
     "muon-optimizer",
     "pytorch-optimizer>=3.7.0",
     "accelerate>=1.9.0",
-    "kernels>=0.9.0",
 ]
 
 [project.optional-dependencies]
