Add evaluation functionality with Wandb integration
- Implemented a new evaluation script in `evaluate.py` to perform model evaluations using lm_eval.
- Configured the evaluation for tasks "hellaswag" and "piqa" with automatic batch sizing.
- Integrated Wandb for logging evaluation results and samples, initializing a new project "krill-eval".

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "muon-optimizer",
     "pytorch-optimizer>=3.7.0",
     "accelerate>=1.9.0",
+    "lm-eval[wandb]>=0.4.9",
 ]
 
 [project.optional-dependencies]
