Implement code changes to enhance functionality and improve performance

--- a/examples/qwen-micro-1k.yaml
+++ b/examples/qwen-micro-1k.yaml
@@ -24,4 +24,4 @@ train:
   muon_implementation: moonlight
   micro_batch_size: 32
   gradient_accumulation_steps: 1
-  resume: auto
+  resume: false
