--- a/examples/qwen-micro-1k.yaml
+++ b/examples/qwen-micro-1k.yaml
@@ -21,7 +21,7 @@ train:
   learning_rate: 1e-3
   weight_decay: 0.01
   optimizer: muon
-  muon_implementation: moonlight
+  muon_implementation: pytorch_optimizer
   micro_batch_size: 32
   gradient_accumulation_steps: 1
   resume: false
